--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -1,1 +1,105 @@
-<p>ordenar works!</p>
+<div class="text-layout">
+    <h1>Pipes Personalizados</h1>
+    <p>
+        pipes creados por {{ 'nosotros' |mayusculas:mayus}}
+    </p>
+
+    <button pButton pRipple 
+            type="button" label="Toggle" 
+            class="p-button-raised p-button-success"
+            (click)="transformar( )">
+    </button>
+</div>
+
+
+<p-toolbar>
+    <div class="p-toolbar-group-left">
+       
+        
+        
+    </div>
+    
+    <div class="p-toolbar-group-right">
+        
+        <button pButton pRipple 
+                type="button" label="Mayúsculas"
+                icon="pi pi-sort" 
+                class="p-button-raised p-button-success m-2"
+                (click)="transformar( )">
+        </button>
+
+        <button pButton pRipple 
+                type="button" label="Por Nombre"
+                (click)="cambiarOrden('nombre')"
+                icon="pi pi-sort" 
+                class="p-button-raised p-button-info m-2"
+                >
+        </button>
+
+        <button pButton pRipple 
+                type="button" label="Vuela"
+                (click)="cambiarOrden('vuela')"
+                icon="pi pi-sort" 
+                class="p-button-raised p-button-help m-2"
+                >
+        </button>
+
+        <button pButton pRipple 
+                type="button" label="Por Color"
+                (click)="cambiarOrden('color')"
+                icon="pi pi-sort" 
+                class="p-button-raised p-button-warning m-2"
+               >
+        </button>
+        
+    </div>
+</p-toolbar>
+ 
+
+<div class="grid">
+    <div class="col mt-3">
+        <p-table [value]="heroes | ordenar: ordenarPor">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>Nombre</th>
+                    <th>Vuela</th>
+                    <th>Color</th>
+                    
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-heroe>
+                <tr>
+                    <td>{{heroe.nombre | titlecase}}</td>
+                    <td>{{heroe.vuela |siNo | titlecase}}</td>
+                    <td>{{heroe.color}}</td>
+                    
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+</div> 
+
+
+<div class="grid">
+    <div class="col mt-3">
+        <p-table [value]="heroes | slice:0">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th pSortableColumn="nombre">Nombre <p-sortIcon field="nombre"></p-sortIcon></th>
+                    <th pSortableColumn="vuela">Vuela <p-sortIcon field="vuela"></p-sortIcon></th>
+                    <th pSortableColumn="color">Color <p-sortIcon field="color"></p-sortIcon></th>
+                   
+                    
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-heroe>
+                <tr>
+                    <td>{{heroe.nombre | titlecase}}</td>
+                    <td>{{heroe.vuela |siNo | titlecase}}</td>
+                    <td>{{heroe.color}}</td>
+                    
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+</div>
